--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       </figure>
                  
                       <figure>
-                        <a href="https://kyday.github.io/profile/minigame/" target="_blank"><img id="game__img" src="/images/game.JPG"></a>
+                        <a href="https://kyday.github.io/profile/minigame/" target="_blank"><img id="game__img" src="/images/1to50.jpg"></a>
                         <figcaption>MINI GAME 1 to 50</figcaption>
                       </figure>
             </section>
