--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <!-- thumnails -->
             <section class="thumnails">
                     <figure>
-                        <a href="https://kyday.github.io/profile/profile" target="_blank"><img src="./images/profile.jpg"></a>
+                        <a href="https://kyday.github.io/westudy/profile" target="_blank"><img src="./images/profile.jpg"></a>
                         <figcaption>Profile</figcaption>
                       </figure>
                  
                       <figure>
-                        <a href="https://kyday.github.io/profile/minigame/" target="_blank"><img id="game__img" src="/images/1to50.jpg"></a>
+                        <a href="https://kyday.github.io/westudy/minigame" target="_blank"><img src="/images/1to50.jpg"></a>
                         <figcaption>MINI GAME 1 to 50</figcaption>
                       </figure>
             </section>
