--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       </figure>
                  
                       <figure>
-                        <a href="https://kyday.github.io/westudy/minigame" target="_blank"><img src="/images/1to50.jpg"></a>
+                        <a href="https://kyday.github.io/westudy/minigame" target="_blank"><img src="./images/1to50.jpg"></a>
                         <figcaption>MINI GAME 1 to 50</figcaption>
                       </figure>
             </section>
