--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                  
                     
                       <figure>
-                        <a href="https://kyday.github.io/westudy/minigame/" target="_blank"><img id="game__img" src="/images/1to50.jpg"></a>
+                        <a href="https://kyday.github.io/westudy/minigame/" target="_blank"><img src="/images/1to50.jpg" alt="game_img"></a>
                         <figcaption>MINI GAME 1 to 50</figcaption>
                       </figure>
             </section>
