--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                  
                     
                       <figure>
-                        <a href="https://kyday.github.io/westudy/minigame/" target="_blank"><img src="./images/1to50__img.jpg" alt="game_img"></a>
+                        <a href="https://kyday.github.io/westudy/minigame" target="_blank"><img src="./images/1to50__img.jpg" alt="game_img"></a>
                         <figcaption>MINI GAME 1 to 50</figcaption>
                       </figure>
             </section>
